--- a/sites/packages.cfg
+++ b/sites/packages.cfg
@@ -17,18 +17,10 @@ unzip = true
 
 # Packages to check out/update when buildout is run
 auto-checkout =	
-    pas.plugins.sqlalchemy
-    emc.bokeh
-    emc.kb
-    emc.memberArea    
-    emc.project
     emc.theme
-    emc.policy
-    plone.app.locales
-    collective.saconnect	   	
-    collective.quickupload	
-    collective.gtags   	
     plonetheme.barceloneta
+    my315ok.socialorgnization
+    xtshzz.policy
 # Make sure buildout always attempts to update packages
 #always-checkout = force
 always-checkout = false
@@ -38,28 +30,13 @@ always-checkout = false
 main =
     Plone
     Pillow
-    emc.kb
-    emc.bokeh
-    emc.memberArea
-    emc.project
     emc.theme
-    emc.policy
-    pas.plugins.sqlalchemy
-    collective.saconnect
-    collective.gtags
-    collective.z3cform.datagridfield
+    my315ok.socialorgnization
+    xtshzz.policy
     
 
 test =
-    emc.kb [test]
-    emc.bokeh [test]
-    emc.memberArea [test]    
-    emc.project [test]
     emc.theme [test]
-    emc.policy [test]
-#    collective.quickupload [test]
-#    collective.filepreviewbehavior [test]
-    collective.gtags [test]
 
 devtools =
     bpython
@@ -77,21 +54,7 @@ devtools =
 
 # Checkout locations
 [sources]
-collective.saconnect = fs collective.saconnect
-collective.quickupload = fs collective.quickupload
-collective.gtags = fs collective.gtags
-pas.plugins.sqlalchemy = fs pas.plugins.sqlalchemy
 plonetheme.barceloneta = fs plonetheme.barceloneta
-emc.kb = fs emc.kb
-emc.bokeh = fs emc.bokeh
-emc.memberArea = fs emc.memberArea
-emc.project = fs emc.project
 emc.theme = fs emc.theme
 emc.policy = fs emc.policy
-Products.ARFilePreview = fs Products.ARFilePreview
-collective.filepreviewbehavior = fs collective.filepreviewbehavior
-Products.AROfficeTransforms = fs Products.AROfficeTransforms
-Products.PortalTransforms = fs Products.PortalTransforms
-plone.app.locales = fs plone.app.locales
 my315ok.socialorgnization = fs my315ok.socialorgnization
-collective.z3cform.datagridfield_demo = fs collective.z3cform.datagridfield_demo
