--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,6 @@
 [submodule "sites/src/xsgs.policy"]
 	path = sites/src/xsgs.policy
 	url = git@github.com:adam139/xsgs.policy.git
+[submodule "sites/src/xsgs.theme"]
+	path = sites/src/xsgs.theme
+	url = git@github.com:adam139/xsgs.theme.git
