--- a/sites/packages.cfg
+++ b/sites/packages.cfg
@@ -18,22 +18,30 @@ unzip = true
 
 # Packages to check out/update when buildout is run
 auto-checkout =	
-    emc.theme
-    plonetheme.barceloneta
     collective.indexing
     my315ok.socialorgnization
     my315ok.products
     my315ok.wechat
+    my315ok.diazo960
     xtshzz.policy
     xtgl.policy
     hjzgb.policy
     xsgs.policy
+    xtgl.theme
+    hjzgb.theme
+    lonsunn.theme
+    xsgs.theme
+    my315ok.theme
+    my315ok.policy
     lonsunn.policy
     wechat.policy
     membrane.usersinout
     dexterity.membrane
     my315ok.portlet.fetchouterhtml
     collective.diazotheme.bootstrap
+    plone.multilingual
+    diazotheme.bootstrap
+
 # Make sure buildout always attempts to update packages
 #always-checkout = force
 always-checkout = false
@@ -42,7 +50,10 @@ always-checkout = false
 [eggs]
 main =
     Plone
+    Products.PloneFormGen
 #    plone.app.form
+    my315ok.diazo960
+    Products.Carousel
     collective.indexing
 #    Pillow
 #    quintagroup.seoptimizer
@@ -53,23 +64,36 @@ main =
     collective.diazotheme.bootstrap
     dexterity.membrane
     xtshzz.policy
-#    xtgl.policy
-#    xsgs.policy
-#    lonsunn.policy
+    xtgl.policy
+    xsgs.policy
+    xsgs.theme
+    xtgl.theme
+    hjzgb.theme
+    lonsunn.theme
+    my315ok.theme
+    my315ok.policy
+    lonsunn.policy
+    xsgs.policy
     hjzgb.policy
     wechat.policy
     my315ok.wechat
     membrane.usersinout
     plone.app.multilingual
+    diazotheme.bootstrap
     
 
 test =
-    emc.theme [test]
+    xtgl.theme [test]
+    xsgs.theme [test]
+    hjzgb.theme [test]
+    lonsunn.theme [test]
+    my315ok.theme [test]
     collective.diazotheme.bootstrap [test]
 
 devtools =
     bpython
     plone.reload
+    wildcard.fixpersistentutilities
     Products.PDBDebugMode
     Products.PrintingMailHost
     Products.DocFinderTab
@@ -90,6 +114,12 @@ emc.policy = fs emc.policy
 xtshzz.policy = fs xtshzz.policy
 xtgl.policy = fs xtgl.policy
 xsgs.policy = fs xsgs.policy
+xsgs.theme = fs xsgs.theme
+xtgl.theme = fs xtgl.theme
+hjzgb.theme = fs hjzgb.theme
+lonsunn.theme = fs lonsunn.theme
+my315ok.theme = fs my315ok.theme
+my315ok.policy = fs my315ok.policy
 lonsunn.policy = fs lonsunn.policy
 hjzgb.policy = fs hjzgb.policy
 wechat.policy = fs wechat.policy
@@ -100,3 +130,6 @@ my315ok.socialorgnization = fs my315ok.socialorgnization
 my315ok.products = fs my315ok.products
 collective.diazotheme.bootstrap = fs collective.diazotheme.bootstrap
 dexterity.membrane = fs dexterity.membrane
+plone.multilingual = fs plone.multilingual
+diazotheme.bootstrap = fs diazotheme.bootstrap
+my315ok.diazo960 = fs my315ok.diazo960
