--- a/sites/versionslastprod.cfg
+++ b/sites/versionslastprod.cfg
@@ -3,6 +3,7 @@ Cheetah = 2.2.1
 Products.DocFinderTab = 1.0.5
 Products.PDBDebugMode = 1.3.1
 Products.PrintingMailHost = 0.7
+wildcard.fixpersistentutilities = 1.1b7
 ZopeSkel = 2.19
 bpython = 0.13.1
 collective.dexteritypaste = 1.0alpha1.1
@@ -63,3 +64,4 @@ plone.app.form = 2.3.2
 quintagroup.seoptimizer = 4.3
 Products.membrane = 3.0
 plone.app.controlpanel = 3.0.4
+Products.PloneFormGen = 1.8.1
