remove diazotheme.bootstrap

--- a/sites/packages.cfg
+++ b/sites/packages.cfg
@@ -79,7 +79,7 @@ main =
     my315ok.wechat
     membrane.usersinout
     plone.app.multilingual
-    diazotheme.bootstrap
+#    diazotheme.bootstrap
     
 
 test =
