--- a/sites/packages.cfg
+++ b/sites/packages.cfg
@@ -51,9 +51,10 @@ always-checkout = false
 main =
     Plone
     Products.PloneFormGen
+#    Products.ContentWellPortlets
 #    plone.app.form
     my315ok.diazo960
-    Products.Carousel
+#    Products.Carousel
     collective.indexing
 #    Pillow
 #    quintagroup.seoptimizer
