--- a/sites/packages.cfg
+++ b/sites/packages.cfg
@@ -39,6 +39,7 @@ auto-checkout =
     dexterity.membrane
     my315ok.portlet.fetchouterhtml
     collective.diazotheme.bootstrap
+    plone.app.locales
     plone.multilingual
     diazotheme.bootstrap
 
@@ -130,6 +131,7 @@ my315ok.portlet.fetchouterhtml = fs my315ok.portlet.fetchouterhtml
 my315ok.socialorgnization = fs my315ok.socialorgnization
 my315ok.products = fs my315ok.products
 collective.diazotheme.bootstrap = fs collective.diazotheme.bootstrap
+plone.app.locales = fs plone.app.locales
 dexterity.membrane = fs dexterity.membrane
 plone.multilingual = fs plone.multilingual
 diazotheme.bootstrap = fs diazotheme.bootstrap
