--- a/sites/packages.cfg
+++ b/sites/packages.cfg
@@ -40,6 +40,8 @@ auto-checkout =
     my315ok.portlet.fetchouterhtml
     collective.diazotheme.bootstrap
     plone.app.locales
+    mockup
+    Products.CMFPlone
     plone.multilingual
     diazotheme.bootstrap
 
@@ -132,6 +134,8 @@ my315ok.socialorgnization = fs my315ok.socialorgnization
 my315ok.products = fs my315ok.products
 collective.diazotheme.bootstrap = fs collective.diazotheme.bootstrap
 plone.app.locales = fs plone.app.locales
+mockup = fs mockup
+Products.CMFPlone = fs Products.CMFPlone	
 dexterity.membrane = fs dexterity.membrane
 plone.multilingual = fs plone.multilingual
 diazotheme.bootstrap = fs diazotheme.bootstrap
