--- a/sites/buildout_dev.cfg
+++ b/sites/buildout_dev.cfg
@@ -21,6 +21,7 @@ extends =
 recipe = plone.recipe.zope2instance
 http-address = 8080
 user = admin:admin
+debug-mode = on
 verbose-security = on
 eggs =
     ${eggs:main}
