--- a/sites/packages.cfg
+++ b/sites/packages.cfg
@@ -54,7 +54,7 @@ always-checkout = false
 main =
     Plone
     Products.PloneFormGen
-#    Products.ContentWellPortlets
+    Products.ContentWellPortlets
 #    plone.app.form
     my315ok.diazo960
 #    Products.Carousel
