--- a/sites/packages.cfg
+++ b/sites/packages.cfg
@@ -83,6 +83,7 @@ main =
     my315ok.wechat
     membrane.usersinout
     plone.app.multilingual
+    archetypes.multilingual
 #    diazotheme.bootstrap
     
 
