--- a/sites/versionslastprod.cfg
+++ b/sites/versionslastprod.cfg
@@ -59,9 +59,14 @@ collective.wtf = 1.0b9
 # emc.policy==1.0
 z3c.jbot = 0.7.2
 
-plone.app.multilingual = 4.0.2
+plone.app.multilingual = 4.0.3
 plone.app.form = 2.3.2
 quintagroup.seoptimizer = 4.3
 Products.membrane = 3.0
 plone.app.controlpanel = 3.0.4
 Products.PloneFormGen = 1.8.1
+
+Products.CMFEditions = 2.2.20
+DateTime = 4.0.1
+plone.app.content = 3.1.1
+collective.zopeedit = 1.0.0
