fix site buildout config

--- a/sites/config/deploy_haproxy.cfg
+++ b/sites/config/deploy_haproxy.cfg
@@ -5,7 +5,6 @@ parts +=
     zeoserver
     client1
     client2
-    atcontenttypes-conf
     varnish-build
     varnish-instance
    
@@ -107,17 +106,7 @@ command =echo Dummy references to force this to execute after referenced parts
 update-command = ${chown-zeo:command}
 
 
-# self define parts
-[atcontenttypes-conf]
-recipe = plone.recipe.atcontenttypes
-zope-instance-location = 
-                        ${client1:location}
-                        ${client2:location}
-max-file-size          = ATImage:1mb
-                             ATFile:10mb
-                             ATNewsItem:500kb
-max-image-dimension    = ATNewsItem:640,400
-                             ATImage:1024,1024
+
 
 [varnish-instance]
 recipe = plone.recipe.varnish
@@ -129,11 +118,11 @@ backends =
 cache-size = 1G
 user = ${client1:effective-user}
 connect-timeout = 1.5s
-varnish_version = 3
+#varnish_version = 3
 [varnish-build]
 recipe = zc.recipe.cmmi
-#url = http://repo.varnish-cache.org/source/varnish-2.1.5.tar.gz
-url = http://repo.varnish-cache.org/source/varnish-3.0.3.tar.gz
+url = http://repo.varnish-cache.org/source/varnish-2.1.5.tar.gz
+#url = http://repo.varnish-cache.org/source/varnish-3.0.3.tar.gz
 
 
 [supervisor]
