add command compile and compile bundles

--- a/sites/buildout_dev.cfg
+++ b/sites/buildout_dev.cfg
@@ -12,6 +12,7 @@ parts =
     checkversions
     mkrelease
     diazotools
+    resources
 
 extends =
     packages.cfg
@@ -98,3 +99,8 @@ eggs = jarn.mkrelease
 [diazotools]
 recipe = zc.recipe.egg
 eggs = diazo
+
+[resources]
+recipe = zc.recipe.egg
+eggs = Products.CMFPlone
+scripts = plone-compile-resources
