remove develop packages

--- a/sites/packages.cfg
+++ b/sites/packages.cfg
@@ -42,8 +42,8 @@ auto-checkout =
     plone.app.locales
     mockup
     Products.CMFPlone
-    plone.multilingual
-    diazotheme.bootstrap
+#    plone.multilingual
+#    diazotheme.bootstrap
 
 # Make sure buildout always attempts to update packages
 #always-checkout = force
@@ -138,6 +138,6 @@ plone.app.locales = fs plone.app.locales
 mockup = fs mockup
 Products.CMFPlone = fs Products.CMFPlone	
 dexterity.membrane = fs dexterity.membrane
-plone.multilingual = fs plone.multilingual
-diazotheme.bootstrap = fs diazotheme.bootstrap
+#plone.multilingual = fs plone.multilingual
+#diazotheme.bootstrap = fs diazotheme.bootstrap
 my315ok.diazo960 = fs my315ok.diazo960
