Upgrade to Plone5.0.7

--- a/sites/config/deploy.cfg
+++ b/sites/config/deploy.cfg
@@ -2,31 +2,36 @@
 [buildout]
 
 parts +=
+    resources
     zeoserver
+    devinstance
+    test
+    instance
     client1
     client2
-    atcontenttypes-conf
     varnish-build
-    varnish-instance
-    poundbuild
-    configpound    
+    varnish-configuration
+    varnish-script
     supervisor
     precompile
     chown
+#    chown-zeo
     unifiedinstaller
     logrotate.conf
     backup
     backup-daily
     backup-weekly
+    ${buildout:haproxy-parts}
     
-extensions = mr.developer buildout.dumppickedversions
-dump-picked-versions-file = versionslastprod.cfg
-overwrite-picked-versions-file = true 
 extends = 
     base.cfg
+    haproxy.cfg    
      ../packages.cfg
 
-
+[resources]
+recipe = zc.recipe.egg
+eggs = Products.CMFPlone
+scripts = plone-compile-resources
 
 [zeoserver]
 # Use this section to install and configure a Zope
@@ -41,6 +46,46 @@ zeo-log     = ${buildout:directory}/var/zeoserver/zeoserver.log
 pid-file    = ${buildout:directory}/var/zeoserver/zeoserver.pid
 socket-name = ${buildout:directory}/var/zeoserver/zeo.zdsock
 blob-storage = ${buildout:directory}/var/blobstorage
+
+# Development Zope instance. Installs the ``bin/instance`` script
+[devinstance]
+recipe = plone.recipe.zope2instance
+http-address = 8080
+user = ${buildout:user}
+verbose-security = on
+zserver-threads = 4
+eggs =
+    ${eggs:main}
+    ${eggs:devtools}
+    
+
+environment-vars =
+#    ZC_ASYNC_UUID ${buildout:directory}/var/instance-uuid.txt
+    PTS_LANGUAGES zh_CN en zh zh_TW
+    zope_i18n_allowed_languages zh_CN zh_TW 
+    zope_i18n_compile_mo_files false
+    PLONE_CSRF_DISABLED  true
+
+# Test runner. Run: ``bin/test`` to execute all tests
+[test]
+recipe = zc.recipe.testrunner
+eggs = ${eggs:test}
+       ${eggs:main}
+       plone.app.testing
+defaults = ['--auto-color', '--auto-progress']
+
+# Single instace model. Installs the ``bin/instance`` script
+[instance]
+recipe = plone.recipe.zope2instance
+http-address = 8080
+user = ${buildout:user}
+verbose-security = off
+zserver-threads = 4
+z2-log-level = ERROR
+event-log-level = ERROR
+eggs =
+    ${eggs:main}
+environment-vars = ${devinstance:environment-vars}
 
 [client1]
 # Use this section to install and configure a Zope
@@ -57,7 +102,7 @@ zeo-address = ${zeoserver:zeo-address}
 user = ${buildout:user}
 # if we try to start as root, Zope will switch to the user below
 effective-user = ${buildout:effective-user}
-http-address = ${buildout:http-address}
+http-address = ${buildout:client1-address}
 blob-storage = ${zeoserver:blob-storage}
 shared-blob = on
 # change debug-mode to "on" to run in development mode
@@ -72,18 +117,14 @@ z2-log    = ${buildout:directory}/var/client1/Z2.log
 pid-file  = ${buildout:directory}/var/client1/client1.pid
 lock-file = ${buildout:directory}/var/client1/client1.lock
 
-
+zserver-threads = 8
+#zodb-cache-size = 200000
+#zeo-client-cache-size = 256MB
 # If you want Zope to know about any additional eggs, list them here.
 # e.g. eggs = ${buildout:eggs} my.package
 eggs =    
-
     ${eggs:main}
-
-environment-vars =
-
-    zope_i18n_allowed_languages zh_CN zh_TW en zh 
-    zope_i18n_compile_mo_files false
-
+environment-vars = ${devinstance:environment-vars}
 
 [client2]
 # a copy of client1, except adjusted address and var location
@@ -107,47 +148,21 @@ command =echo Dummy references to force this to execute after referenced parts
     chmod 744 ${buildout:directory}/bin/*
 update-command = ${chown-zeo:command}
 
+# varnish
+[varnish-build]
+recipe = plone.recipe.varnish:build
 
-# self define parts
-[atcontenttypes-conf]
-recipe = plone.recipe.atcontenttypes
-zope-instance-location = 
-                        ${client1:location}
-                        ${client2:location}
-max-file-size          = ATImage:1mb
-                             ATFile:10mb
-                             ATNewsItem:500kb
-max-image-dimension    = ATNewsItem:640,400
-                             ATImage:1024,1024
+[varnish-configuration]
+recipe = plone.recipe.varnish:configuration
+backends = 127.0.0.1:${buildout:haproxy-address}
 
-[varnish-instance]
-recipe = plone.recipe.varnish
+[varnish-script]
+recipe = plone.recipe.varnish:script
 mode = foreground 
 daemon = ${buildout:directory}/parts/varnish-build/sbin/varnishd
 bind = 127.0.0.1:${buildout:varnish-address}
-backends =
-        127.0.0.1:${buildout:pound-address}
-cache-size = 1G
-user = ${client1:effective-user}
-connect-timeout = 1.5s
-
-[varnish-build]
-recipe = zc.recipe.cmmi
-url = http://repo.varnish-cache.org/source/varnish-2.1.5.tar.gz
-#url = http://repo.varnish-cache.org/source/varnish-3.0.3.tar.gz
-[configpound]
-recipe = plone.recipe.pound:config
-executable = /usr/sbin/pound
-timeout = 88
-log_level = 0
-daemon = 0
-balancers =
-        one  127.0.0.1:${buildout:pound-address} 127.0.0.1:${buildout:client1-address}  127.0.0.1:${buildout:client2-address}
-
-[poundbuild]
-recipe = plone.recipe.pound:build
-url = http://www.apsis.ch/pound/Pound-2.6.tgz
-#url = http://www.apsis.ch/pound/Pound-2.3.2.tgz
+cache-size = 512M
+user = ${buildout:effective-user}
 
 [supervisor]
 # http://pypi.python.org/pypi/collective.recipe.supervisor
@@ -163,11 +178,11 @@ programs =
     10 zeoserver    ${zeoserver:location}/bin/runzeo    ${zeoserver:location}
     20 client1    ${buildout:directory}/bin/client1 [console] true ${client1:effective-user}
     30 client2    ${buildout:directory}/bin/client2 [console] true ${client1:effective-user}
-    40 pound        ${buildout:directory}/bin/poundrun ${buildout:directory}  true 
-    50 varnish      ${buildout:directory}/bin/varnish-instance  ${buildout:directory}  true 
+    40 haproxy    ${buildout:directory}/bin/haproxy       [-f ${buildout:directory}/etc/haproxy.conf] true ${users:haproxy}    
+    50 varnish      ${buildout:directory}/bin/varnish-script  ${buildout:directory}  true 
 eventlisteners =
-    HttpOk TICK_60 ${buildout:bin-directory}/httpok [-p site1 -t 20 http://localhost:8081/]
-    Memmon TICK_60 ${buildout:bin-directory}/memmon [-p client1=400MB]
+    HttpOk TICK_60 ${buildout:bin-directory}/httpok [-p site1 -t 30 http://localhost:8081/]
+#    Memmon TICK_60 ${buildout:bin-directory}/memmon [-p client1=400MB]
     
 [logrotate.conf]
 recipe = zc.recipe.deployment:configuration
@@ -177,19 +192,19 @@ text =
     create
     compress
     delaycompress
-    ${buildout:directory}/var/log/instance1*.log {
+    ${buildout:directory}/var/log/client1*.log {
         sharedscripts
         postrotate
             /bin/kill -USR2 $(cat ${buildout:directory}/var/client1/client1.pid)
         endscript
     }
-    ${buildout:directory}/var/log/instance2*.log {
+    ${buildout:directory}/var/log/client2*.log {
         sharedscripts
         postrotate
             /bin/kill -USR2 $(cat ${buildout:directory}/var/client2/client2.pid)
         endscript
     }
-    ${buildout:directory}/var/log/zeoserver.log {
+    ${buildout:directory}/var/log/zeoserver*.log {
         postrotate
             /bin/kill -USR2 $(cat ${buildout:directory}/var/zeoserver/zeoserver.pid)
         endscript
@@ -201,7 +216,7 @@ text =
 # For options see http://pypi.python.org/pypi/plone.recipe.precompiler
 [precompile]
 recipe = plone.recipe.precompiler
-
+eggs = ${eggs:main}
 
 # This recipe is used to set permissions -- and ownership for root mode installs
 # For options see http://pypi.python.org/pypi/plone.recipe.command
@@ -223,7 +238,6 @@ recipe = plone.recipe.unifiedinstaller
 user = ${client1:user}
 primary-port = ${client1:http-address}
 sudo-command = 
-
 
 # This recipe builds the backup, restore and snapshotbackup commands.
 # For options see http://pypi.python.org/pypi/collective.recipe.backup
