--- a/sites/packages.cfg
+++ b/sites/packages.cfg
@@ -9,9 +9,8 @@ update-versions-file = versionslastprod2.cfg
 extends = 
 # Known good sets of eggs we may be using
 #		http://dist.plone.org/release/5-latest/versions.cfg
-#    4.3.4-versions.cfg
-    5.0.4-versions.cfg
-    versionslastprod.cfg
+    5.0.7-versions.cfg
+    pins-5.0.7.cfg
 
 versions = versions
 unzip = true
@@ -22,7 +21,6 @@ auto-checkout =
     my315ok.socialorgnization
     my315ok.products
     my315ok.wechat
-    my315ok.diazo960
     xtshzz.policy
     xtgl.policy
     hjzgb.policy
@@ -41,12 +39,8 @@ auto-checkout =
     collective.diazotheme.bootstrap
     plone.app.locales
     mockup
-    Products.CMFPlone
-#    plone.multilingual
-#    diazotheme.bootstrap
 
 # Make sure buildout always attempts to update packages
-#always-checkout = force
 always-checkout = false
    
 # Egg sets
@@ -54,17 +48,10 @@ always-checkout = false
 main =
     Plone
     Products.PloneFormGen
-    Products.ContentWellPortlets
-#    plone.app.form
-    my315ok.diazo960
-#    Products.Carousel
     collective.indexing
 #    Pillow
-#    quintagroup.seoptimizer
-#    emc.theme
     my315ok.socialorgnization
     my315ok.products
-
     collective.diazotheme.bootstrap
     dexterity.membrane
     xtshzz.policy
@@ -84,8 +71,6 @@ main =
     membrane.usersinout
     plone.app.multilingual
     archetypes.multilingual
-#    diazotheme.bootstrap
-    
 
 test =
     xtgl.theme [test]
@@ -112,7 +97,6 @@ devtools =
 
 # Checkout locations
 [sources]
-plonetheme.barceloneta = fs plonetheme.barceloneta
 collective.indexing = fs collective.indexing
 emc.theme = fs emc.theme
 emc.policy = fs emc.policy
@@ -136,8 +120,4 @@ my315ok.products = fs my315ok.products
 collective.diazotheme.bootstrap = fs collective.diazotheme.bootstrap
 plone.app.locales = fs plone.app.locales
 mockup = fs mockup
-Products.CMFPlone = fs Products.CMFPlone	
 dexterity.membrane = fs dexterity.membrane
-#plone.multilingual = fs plone.multilingual
-#diazotheme.bootstrap = fs diazotheme.bootstrap
-my315ok.diazo960 = fs my315ok.diazo960
