--- a/sites/buildout_dev.cfg
+++ b/sites/buildout_dev.cfg
@@ -33,8 +33,8 @@ eggs =
 
 environment-vars =
 #    ZC_ASYNC_UUID ${buildout:directory}/var/instance-uuid.txt
-    PTS_LANGUAGES zh_CN en zh fr
-    zope_i18n_allowed_languages zh_CN en zh zh_TW fr
+    PTS_LANGUAGES zh_CN en zh 
+    zope_i18n_allowed_languages zh_CN en zh zh_TW 
     zope_i18n_compile_mo_files false
     PLONE_CSRF_DISABLED  true
 
@@ -69,8 +69,6 @@ eggs =
     ${eggs:main}
     ${eggs:devtools}
 
-
-
 interpreter = zopepy
 
 # Installs ZopeSkel, which can be used to create new packages
@@ -82,7 +80,6 @@ eggs =
        ${instance:eggs}
 entry-points = paster=paste.script.command:run  
    
-     
 
 # Tool to help check for new versions.
 # Run: ``bin/checkversions versions.cfg``
