--- a/sites/pins-5.0.7.cfg
+++ b/sites/pins-5.0.7.cfg
@@ -1,4 +1,46 @@
 [versions]
+Products.PloneFormGen = 1.8.1
+Products.PythonField = 1.1.3
+Products.TALESField = 1.1.3
+Products.TemplateFields = 1.2.5
+wildcard.fixpersistentutilities = 1.1b7
+zope.app.locales = 3.6.2
+
+# Required by:
+# my315ok.products==4.0
+BeautifulSoup = 3.2.1
+
+# Required by:
+# wechat.policy==1.0
+Products.membrane = 3.0
+
+# Required by:
+# dexterity.membrane==0.3.dev0
+incf.countryutils = 1.0
+
+# Required by:
+# dexterity.membrane==0.3.dev0
+plone.formwidget.captcha = 1.0.3
+
+# Required by:
+# my315ok.products==4.0
+plone.multilingual = 1.2.1
+
+# Required by:
+# plone.app.theming==1.3.5
+roman = 1.4.0
+# Required by:
+# plone.formwidget.captcha==1.0.3
+skimpyGimpy = 1.4
+
+# Required by:
+# plone.namedfile==3.0.10
+zope.app.file = 3.6.1
+
+# Required by:
+# Products.CMFCore==2.2.10
+# zope.app.file==3.6.1
+zope.app.publication = 3.12.0
 plone.recipe.varnish = 2.0a5
 mr.developer = 1.38
 Cheetah = 2.2.1
