--- a/sites/packages.cfg
+++ b/sites/packages.cfg
@@ -39,6 +39,7 @@ auto-checkout =
     collective.diazotheme.bootstrap
     plone.app.locales
     mockup
+    WeRoBot
 
 # Make sure buildout always attempts to update packages
 always-checkout = false
@@ -71,6 +72,7 @@ main =
     membrane.usersinout
     plone.app.multilingual
     archetypes.multilingual
+    WeRoBot
 
 test =
     xtgl.theme [test]
@@ -121,3 +123,5 @@ collective.diazotheme.bootstrap = fs collective.diazotheme.bootstrap
 plone.app.locales = fs plone.app.locales
 mockup = fs mockup
 dexterity.membrane = fs dexterity.membrane
+WeRoBot = fs WeRoBot
+#WeRoBot = git https://github.com/adam139/WeRoBot.git
