--- a/sites/packages.cfg
+++ b/sites/packages.cfg
@@ -49,6 +49,7 @@ always-checkout = false
 main =
     Plone
     Products.PloneFormGen
+    Products.ContentWellPortlets
     collective.indexing
 #    Pillow
     my315ok.socialorgnization
