--- a/sites/config/deploy_all.cfg
+++ b/sites/config/deploy_all.cfg
@@ -4,6 +4,9 @@
 parts +=
     resources
     zeoserver
+    devinstance
+    test
+    instance
     client1
     client2
     varnish-build
@@ -53,6 +56,7 @@ verbose-security = on
 zserver-threads = 4
 eggs =
     ${eggs:main}
+    ${eggs:devtools}
     
 
 environment-vars =
