--- a/sites/pins-5.0.7.cfg
+++ b/sites/pins-5.0.7.cfg
@@ -1,4 +1,18 @@
 [versions]
+Products.ContentWellPortlets = 4.3.0
+
+# Required by:
+# WeRoBot==1.1.1
+bottle = 0.12.13
+
+# Required by:
+# WeRoBot==1.1.1
+funcsigs = 1.0.2
+
+# Required by:
+# WeRoBot==1.1.1
+xmltodict = 0.10.2
+
 Products.PloneFormGen = 1.8.1
 Products.PythonField = 1.1.3
 Products.TALESField = 1.1.3
