fix packages for import old xtgl site

--- a/sites/packages.cfg
+++ b/sites/packages.cfg
@@ -21,6 +21,7 @@ auto-checkout =
     my315ok.socialorgnization
     my315ok.products
     my315ok.wechat
+#    my315ok.spider
     xtshzz.policy
     xtgl.policy
     hjzgb.policy
@@ -37,6 +38,7 @@ auto-checkout =
     dexterity.membrane
     my315ok.portlet.fetchouterhtml
     collective.diazotheme.bootstrap
+    diazotheme.bootstrap
     plone.app.locales
     mockup
     WeRoBot
@@ -55,6 +57,7 @@ main =
     my315ok.socialorgnization
     my315ok.products
     collective.diazotheme.bootstrap
+    diazotheme.bootstrap
     dexterity.membrane
     xtshzz.policy
     xtgl.policy
@@ -65,6 +68,7 @@ main =
     lonsunn.theme
     my315ok.theme
     my315ok.policy
+#   my315ok.spider
     lonsunn.policy
     xsgs.policy
     hjzgb.policy
@@ -81,6 +85,7 @@ test =
     hjzgb.theme [test]
     lonsunn.theme [test]
     my315ok.theme [test]
+#    my315ok.spider [test]
     collective.diazotheme.bootstrap [test]
 
 devtools =
@@ -116,11 +121,13 @@ lonsunn.policy = fs lonsunn.policy
 hjzgb.policy = fs hjzgb.policy
 wechat.policy = fs wechat.policy
 my315ok.wechat = fs my315ok.wechat
+# my315ok.spider = fs my315ok.spider
 membrane.usersinout = fs membrane.usersinout
 my315ok.portlet.fetchouterhtml = fs my315ok.portlet.fetchouterhtml
 my315ok.socialorgnization = fs my315ok.socialorgnization
 my315ok.products = fs my315ok.products
 collective.diazotheme.bootstrap = fs collective.diazotheme.bootstrap
+diazotheme.bootstrap = fs diazotheme.bootstrap
 plone.app.locales = fs plone.app.locales
 mockup = fs mockup
 dexterity.membrane = fs dexterity.membrane
