--- a/sites/packages.cfg
+++ b/sites/packages.cfg
@@ -18,6 +18,7 @@ unzip = true
 # Packages to check out/update when buildout is run
 auto-checkout =	
     collective.indexing
+    collective.filepreviewbehavior
     my315ok.socialorgnization
     my315ok.products
     my315ok.wechat
@@ -40,6 +41,7 @@ auto-checkout =
     collective.diazotheme.bootstrap
     diazotheme.bootstrap
     plone.app.locales
+    plone.dexterity
     mockup
     WeRoBot
 
@@ -52,7 +54,9 @@ main =
     Plone
     Products.PloneFormGen
     Products.ContentWellPortlets
+    Products.PloneHotfix20171128
     collective.indexing
+    collective.filepreviewbehavior
 #    Pillow
     my315ok.socialorgnization
     my315ok.products
@@ -129,7 +133,9 @@ my315ok.products = fs my315ok.products
 collective.diazotheme.bootstrap = fs collective.diazotheme.bootstrap
 diazotheme.bootstrap = fs diazotheme.bootstrap
 plone.app.locales = fs plone.app.locales
+plone.dexterity = fs plone.dexterity
 mockup = fs mockup
 dexterity.membrane = fs dexterity.membrane
 WeRoBot = fs WeRoBot
 #WeRoBot = git https://github.com/adam139/WeRoBot.git
+collective.filepreviewbehavior = fs collective.filepreviewbehavior
