--- a/sites/pins-5.0.7.cfg
+++ b/sites/pins-5.0.7.cfg
@@ -1,4 +1,5 @@
 [versions]
+beautifulsoup4 = 4.6.0
 Products.ContentWellPortlets = 4.3.0
 
 # Required by:
@@ -14,6 +15,7 @@ funcsigs = 1.0.2
 xmltodict = 0.10.2
 
 Products.PloneFormGen = 1.8.1
+Products.PloneHotfix20171128 = 1.0
 Products.PythonField = 1.1.3
 Products.TALESField = 1.1.3
 Products.TemplateFields = 1.2.5
@@ -22,7 +24,6 @@ zope.app.locales = 3.6.2
 
 # Required by:
 # my315ok.products==4.0
-BeautifulSoup = 3.2.1
 
 # Required by:
 # wechat.policy==1.0
