add theme and policy packages for xtcs website

--- a/.gitmodules
+++ b/.gitmodules
@@ -97,3 +97,9 @@
 [submodule "sites/src/WeRoBot"]
 	path = sites/src/WeRoBot
 	url = https://github.com/adam139/WeRoBot.git
+[submodule "sites/src/xtcs.policy"]
+	path = sites/src/xtcs.policy
+	url = git@github.com:adam139/xtcs.policy.git
+[submodule "sites/src/xtcs.theme"]
+	path = sites/src/xtcs.theme
+	url = git@github.com:adam139/xtcs.theme.git
