--- a/sites/packages.cfg
+++ b/sites/packages.cfg
@@ -24,6 +24,8 @@ auto-checkout =
     my315ok.wechat
 #    my315ok.spider
     xtshzz.policy
+    xtcs.policy
+    xtcs.theme    
     xtgl.policy
     hjzgb.policy
     xsgs.policy
@@ -65,6 +67,8 @@ main =
     dexterity.membrane
     xtshzz.policy
     xtgl.policy
+    xtcs.policy
+    xtcs.theme    
     xsgs.policy
     xsgs.theme
     xtgl.theme
@@ -84,6 +88,7 @@ main =
     WeRoBot
 
 test =
+    xtcs.theme [test]
     xtgl.theme [test]
     xsgs.theme [test]
     hjzgb.theme [test]
@@ -117,6 +122,8 @@ xtgl.policy = fs xtgl.policy
 xsgs.policy = fs xsgs.policy
 xsgs.theme = fs xsgs.theme
 xtgl.theme = fs xtgl.theme
+xtcs.theme = fs xtcs.theme
+xtcs.policy = fs xtcs.policy
 hjzgb.theme = fs hjzgb.theme
 lonsunn.theme = fs lonsunn.theme
 my315ok.theme = fs my315ok.theme
