--- a/sites/packages.cfg
+++ b/sites/packages.cfg
@@ -26,6 +26,8 @@ auto-checkout =
     xtshzz.policy
     xtcs.policy
     xtcs.theme    
+    qyxycjh.policy
+    qyxycjh.theme
     xtgl.policy
     hjzgb.policy
     xsgs.policy
@@ -69,6 +71,8 @@ main =
     xtgl.policy
     xtcs.policy
     xtcs.theme    
+    qyxycjh.policy
+    qyxycjh.theme
     xsgs.policy
     xsgs.theme
     xtgl.theme
@@ -124,6 +128,8 @@ xsgs.theme = fs xsgs.theme
 xtgl.theme = fs xtgl.theme
 xtcs.theme = fs xtcs.theme
 xtcs.policy = fs xtcs.policy
+qyxycjh.theme = fs qyxycjh.theme
+qyxycjh.policy = fs qyxycjh.policy
 hjzgb.theme = fs hjzgb.theme
 lonsunn.theme = fs lonsunn.theme
 my315ok.theme = fs my315ok.theme
