--- a/sites/packages.cfg
+++ b/sites/packages.cfg
@@ -18,16 +18,16 @@ unzip = true
 # Packages to check out/update when buildout is run
 auto-checkout =	
     collective.indexing
-    collective.filepreviewbehavior
+#    collective.filepreviewbehavior
     my315ok.socialorgnization
     my315ok.products
     my315ok.wechat
 #    my315ok.spider
-    xtshzz.policy
-    xtcs.policy
-    xtcs.theme    
-    qyxycjh.policy
-    qyxycjh.theme
+#    xtshzz.policy
+#    xtcs.policy
+#    xtcs.theme    
+#    qyxycjh.policy
+#    qyxycjh.theme
     xtgl.policy
     hjzgb.policy
     xsgs.policy
@@ -43,9 +43,9 @@ auto-checkout =
     dexterity.membrane
     my315ok.portlet.fetchouterhtml
     collective.diazotheme.bootstrap
-    diazotheme.bootstrap
+#    diazotheme.bootstrap
     plone.app.locales
-    plone.dexterity
+#    plone.dexterity
     mockup
     WeRoBot
 
@@ -60,19 +60,19 @@ main =
     Products.ContentWellPortlets
     Products.PloneHotfix20171128
     collective.indexing
-    collective.filepreviewbehavior
+#    collective.filepreviewbehavior
 #    Pillow
     my315ok.socialorgnization
     my315ok.products
     collective.diazotheme.bootstrap
-    diazotheme.bootstrap
+#    diazotheme.bootstrap
     dexterity.membrane
     xtshzz.policy
     xtgl.policy
-    xtcs.policy
-    xtcs.theme    
-    qyxycjh.policy
-    qyxycjh.theme
+#    xtcs.policy
+#    xtcs.theme    
+#    qyxycjh.policy
+#    qyxycjh.theme
     xsgs.policy
     xsgs.theme
     xtgl.theme
@@ -92,7 +92,7 @@ main =
     WeRoBot
 
 test =
-    xtcs.theme [test]
+#    xtcs.theme [test]
     xtgl.theme [test]
     xsgs.theme [test]
     hjzgb.theme [test]
@@ -144,11 +144,11 @@ my315ok.portlet.fetchouterhtml = fs my315ok.portlet.fetchouterhtml
 my315ok.socialorgnization = fs my315ok.socialorgnization
 my315ok.products = fs my315ok.products
 collective.diazotheme.bootstrap = fs collective.diazotheme.bootstrap
-diazotheme.bootstrap = fs diazotheme.bootstrap
+# diazotheme.bootstrap = fs diazotheme.bootstrap
 plone.app.locales = fs plone.app.locales
-plone.dexterity = fs plone.dexterity
+#plone.dexterity = fs plone.dexterity
 mockup = fs mockup
 dexterity.membrane = fs dexterity.membrane
 WeRoBot = fs WeRoBot
 #WeRoBot = git https://github.com/adam139/WeRoBot.git
-collective.filepreviewbehavior = fs collective.filepreviewbehavior
+#collective.filepreviewbehavior = fs collective.filepreviewbehavior
