fix packages config

--- a/sites/packages.cfg
+++ b/sites/packages.cfg
@@ -23,9 +23,9 @@ auto-checkout =
     my315ok.products
     my315ok.wechat
 #    my315ok.spider
-#    xtshzz.policy
-#    xtcs.policy
-#    xtcs.theme    
+    xtshzz.policy
+    xtcs.policy
+    xtcs.theme    
 #    qyxycjh.policy
 #    qyxycjh.theme
     xtgl.policy
@@ -69,8 +69,8 @@ main =
     dexterity.membrane
     xtshzz.policy
     xtgl.policy
-#    xtcs.policy
-#    xtcs.theme    
+    xtcs.policy
+    xtcs.theme    
 #    qyxycjh.policy
 #    qyxycjh.theme
     xsgs.policy
