--- a/sites/packages.cfg
+++ b/sites/packages.cfg
@@ -9,7 +9,8 @@ update-versions-file = versionslastprod2.cfg
 extends = 
 # Known good sets of eggs we may be using
 #		http://dist.plone.org/release/5-latest/versions.cfg
-    5.0.7-versions.cfg
+    http://dist.plone.org/release/5.0.8/versions.cfg
+#    5.0.7-versions.cfg
     pins-5.0.7.cfg
 
 versions = versions
