add qyxycjh packages

--- a/sites/packages.cfg
+++ b/sites/packages.cfg
@@ -27,8 +27,8 @@ auto-checkout =
     xtshzz.policy
     xtcs.policy
     xtcs.theme    
-#    qyxycjh.policy
-#    qyxycjh.theme
+    qyxycjh.policy
+    qyxycjh.theme
     xtgl.policy
     hjzgb.policy
     xsgs.policy
@@ -72,8 +72,8 @@ main =
     xtgl.policy
     xtcs.policy
     xtcs.theme    
-#    qyxycjh.policy
-#    qyxycjh.theme
+    qyxycjh.policy
+    qyxycjh.theme
     xsgs.policy
     xsgs.theme
     xtgl.theme
