--- a/sites/packages.cfg
+++ b/sites/packages.cfg
@@ -9,8 +9,9 @@ update-versions-file = versionslastprod2.cfg
 extends = 
 # Known good sets of eggs we may be using
 #		http://dist.plone.org/release/5-latest/versions.cfg
-    5.0.7-versions.cfg
-    pins-5.0.7.cfg
+#    http://dist.plone.org/release/5.1.1/versions.cfg
+    5.1.1-versions.cfg
+    pins-5.1.1.cfg
 
 versions = versions
 unzip = true
@@ -58,8 +59,8 @@ main =
     Plone
     Products.PloneFormGen
     Products.ContentWellPortlets
-    Products.PloneHotfix20171128
-    collective.indexing
+#    Products.PloneHotfix20171128
+#    collective.indexing
 #    collective.filepreviewbehavior
 #    Pillow
     my315ok.socialorgnization
