clear 5.0.7 version files

--- a/sites/packages.cfg
+++ b/sites/packages.cfg
@@ -18,12 +18,10 @@ unzip = true
 
 # Packages to check out/update when buildout is run
 auto-checkout =	
-    collective.indexing
-#    collective.filepreviewbehavior
+#    collective.indexing
     my315ok.socialorgnization
     my315ok.products
     my315ok.wechat
-#    my315ok.spider
     xtshzz.policy
     xtcs.policy
     xtcs.theme    
@@ -44,10 +42,8 @@ auto-checkout =
     dexterity.membrane
     my315ok.portlet.fetchouterhtml
     collective.diazotheme.bootstrap
-#    diazotheme.bootstrap
     plone.app.locales
-#    plone.dexterity
-    mockup
+#    mockup
     WeRoBot
 
 # Make sure buildout always attempts to update packages
@@ -59,14 +55,9 @@ main =
     Plone
     Products.PloneFormGen
     Products.ContentWellPortlets
-#    Products.PloneHotfix20171128
-#    collective.indexing
-#    collective.filepreviewbehavior
-#    Pillow
     my315ok.socialorgnization
     my315ok.products
     collective.diazotheme.bootstrap
-#    diazotheme.bootstrap
     dexterity.membrane
     xtshzz.policy
     xtgl.policy
@@ -81,7 +72,6 @@ main =
     lonsunn.theme
     my315ok.theme
     my315ok.policy
-#   my315ok.spider
     lonsunn.policy
     xsgs.policy
     hjzgb.policy
@@ -93,13 +83,11 @@ main =
     WeRoBot
 
 test =
-#    xtcs.theme [test]
     xtgl.theme [test]
     xsgs.theme [test]
     hjzgb.theme [test]
     lonsunn.theme [test]
     my315ok.theme [test]
-#    my315ok.spider [test]
     collective.diazotheme.bootstrap [test]
 
 devtools =
