--- a/sites/pins-5.1.1.cfg
+++ b/sites/pins-5.1.1.cfg
@@ -1,7 +1,48 @@
 [versions]
 beautifulsoup4 = 4.6.0
 Products.ContentWellPortlets = 4.3.0
+chardet = 3.0.4
+idna = 2.6
+jarn.mkrelease = 3.8
+lazy = 1.2
+setuptools-git = 1.1
+setuptools-hg = 0.4
+setuptools-subversion = 3.1
 
+# Required by:
+# xtcs.policy==1.0
+MySQL-python = 1.2.5
+
+# Required by:
+# xtcs.policy==1.0
+SQLAlchemy = 1.0.9
+
+# Required by:
+# WeRoBot==1.1.1
+bottle = 0.12.13
+
+
+# Required by:
+# my315ok.socialorgnization==1.0
+# xtcs.policy==1.0
+# xtshzz.policy==1.0
+collective.autopermission = 1.0b2
+
+# Required by:
+# my315ok.socialorgnization==1.0
+collective.dexteritytextindexer = 2.1.0
+
+# Required by:
+# xtshzz.policy==1.0
+collective.wtf = 1.0b9
+
+# Required by:
+# my315ok.products==4.0
+rwproperty = 1.0
+
+# Required by:
+# WeRoBot==1.1.1
+xmltodict = 0.10.2
 Products.PloneFormGen = 1.8.1
 Products.PythonField = 1.1.3
 Products.TALESField = 1.1.3
@@ -88,9 +129,6 @@ MarkupSafe = 0.23
 # tornado==4.3
 backports.ssl-match-hostname = 3.5.0.1
 
-# Required by:
-# tornado==4.3
-certifi = 2015.11.20.1
 
 # Required by:
 # bpython==0.14.2
