product model cancel z2 access log

--- a/sites/config/deploy_haproxy.cfg
+++ b/sites/config/deploy_haproxy.cfg
@@ -46,7 +46,9 @@ blob-storage = ${buildout:directory}/var/blobstorage
 
 recipe = plone.recipe.zope2instance
 zeo-client = true
+z2-log = disable
 z2-log-level = ERROR
+event-log = disable
 event-log-level = ERROR
 zeo-address = ${zeoserver:zeo-address}
 # The line below sets only the initial password. It will not change an
