--- a/sites/buildout_dev.cfg
+++ b/sites/buildout_dev.cfg
@@ -2,7 +2,8 @@
 # ================================
 
 [buildout]
-index = https://pypi.python.org/simple/
+index = http://mirrors.aliyun.com/pypi/simple/
+# index = https://pypi.python.org/simple/
 parts =
     instance
     test
