add mrbob,qyxycjh submodules

--- a/sites/buildout_dev.cfg
+++ b/sites/buildout_dev.cfg
@@ -15,6 +15,7 @@ parts =
     mkrelease
     diazotools
     resources
+    mrbob
 
 extends =
     packages.cfg
@@ -103,3 +104,10 @@ eggs = diazo
 recipe = zc.recipe.egg
 eggs = Products.CMFPlone
 scripts = plone-compile-resources
+
+
+[mrbob]
+recipe = zc.recipe.egg
+eggs =
+    mr.bob
+    bobtemplates.plone
