--- a/sites/packages.cfg
+++ b/sites/packages.cfg
@@ -25,8 +25,9 @@ auto-checkout =
     xtshzz.policy
     xtcs.policy
     xtcs.theme    
-#    qyxycjh.policy
-#    qyxycjh.theme
+    qyxycjh.policy
+    qyxycjh.theme
+    qidejt.theme
     xtgl.policy
     hjzgb.policy
     xsgs.policy
@@ -63,8 +64,9 @@ main =
     xtgl.policy
     xtcs.policy
     xtcs.theme    
-#    qyxycjh.policy
-#    qyxycjh.theme
+    qyxycjh.policy
+    qyxycjh.theme
+    qidejt.theme
     xsgs.policy
     xsgs.theme
     xtgl.theme
@@ -118,6 +120,7 @@ xtgl.theme = fs xtgl.theme
 xtcs.theme = fs xtcs.theme
 xtcs.policy = fs xtcs.policy
 qyxycjh.theme = fs qyxycjh.theme
+qidejt.theme = fs qidejt.theme
 qyxycjh.policy = fs qyxycjh.policy
 hjzgb.theme = fs hjzgb.theme
 lonsunn.theme = fs lonsunn.theme
@@ -127,15 +130,12 @@ lonsunn.policy = fs lonsunn.policy
 hjzgb.policy = fs hjzgb.policy
 wechat.policy = fs wechat.policy
 my315ok.wechat = fs my315ok.wechat
-# my315ok.spider = fs my315ok.spider
 membrane.usersinout = fs membrane.usersinout
 my315ok.portlet.fetchouterhtml = fs my315ok.portlet.fetchouterhtml
 my315ok.socialorgnization = fs my315ok.socialorgnization
 my315ok.products = fs my315ok.products
 collective.diazotheme.bootstrap = fs collective.diazotheme.bootstrap
-# diazotheme.bootstrap = fs diazotheme.bootstrap
 plone.app.locales = fs plone.app.locales
-#plone.dexterity = fs plone.dexterity
 mockup = fs mockup
 dexterity.membrane = fs dexterity.membrane
 WeRoBot = fs WeRoBot
