--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,6 @@
 [submodule "sites/src/qyxycjh.policy"]
 	path = sites/src/qyxycjh.policy
 	url = git@github.com:adam139/qyxycjh.policy.git
+[submodule "sites/src/qidejt.policy"]
+	path = sites/src/qidejt.policy
+	url = git@github.com:adam139/qidejt.policy.git
