init submodule qidejt.policy

--- a/sites/config/deploy.cfg
+++ b/sites/config/deploy.cfg
@@ -91,6 +91,8 @@ environment-vars = ${devinstance:environment-vars}
 recipe = plone.recipe.zope2instance
 zeo-client = true
 z2-log-level = ERROR
+z2-log = disable
+event-log = disable
 event-log-level = ERROR
 zeo-address = ${zeoserver:zeo-address}
 # The line below sets only the initial password. It will not change an
