--- a/sites/packages.cfg
+++ b/sites/packages.cfg
@@ -18,15 +18,16 @@ unzip = true
 
 # Packages to check out/update when buildout is run
 auto-checkout =	
-#    collective.indexing
     my315ok.socialorgnization
     my315ok.products
     my315ok.wechat
     xtshzz.policy
     xtcs.policy
+    qidejt.policy
+    qidejt.theme
     xtcs.theme    
-#    qyxycjh.policy
-#    qyxycjh.theme
+    qyxycjh.policy
+    qyxycjh.theme
     xtgl.policy
     hjzgb.policy
     xsgs.policy
@@ -40,10 +41,8 @@ auto-checkout =
     wechat.policy
     membrane.usersinout
     dexterity.membrane
-    my315ok.portlet.fetchouterhtml
     collective.diazotheme.bootstrap
     plone.app.locales
-#    mockup
     WeRoBot
 
 # Make sure buildout always attempts to update packages
@@ -63,8 +62,10 @@ main =
     xtgl.policy
     xtcs.policy
     xtcs.theme    
-#    qyxycjh.policy
-#    qyxycjh.theme
+    qyxycjh.policy
+    qyxycjh.theme
+    qidejt.theme
+    qidejt.policy
     xsgs.policy
     xsgs.theme
     xtgl.theme
@@ -119,6 +120,8 @@ xtcs.theme = fs xtcs.theme
 xtcs.policy = fs xtcs.policy
 qyxycjh.theme = fs qyxycjh.theme
 qyxycjh.policy = fs qyxycjh.policy
+qidejt.theme = fs qidejt.theme
+qidejt.policy = fs qidejt.policy
 hjzgb.theme = fs hjzgb.theme
 lonsunn.theme = fs lonsunn.theme
 my315ok.theme = fs my315ok.theme
@@ -133,11 +136,7 @@ my315ok.portlet.fetchouterhtml = fs my315ok.portlet.fetchouterhtml
 my315ok.socialorgnization = fs my315ok.socialorgnization
 my315ok.products = fs my315ok.products
 collective.diazotheme.bootstrap = fs collective.diazotheme.bootstrap
-# diazotheme.bootstrap = fs diazotheme.bootstrap
 plone.app.locales = fs plone.app.locales
-#plone.dexterity = fs plone.dexterity
 mockup = fs mockup
 dexterity.membrane = fs dexterity.membrane
 WeRoBot = fs WeRoBot
-#WeRoBot = git https://github.com/adam139/WeRoBot.git
-#collective.filepreviewbehavior = fs collective.filepreviewbehavior
