--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,6 @@
 [submodule "sites/src/qidejt.policy"]
 	path = sites/src/qidejt.policy
 	url = git@github.com:adam139/qidejt.policy.git
+[submodule "sites/src/qidejt.theme"]
+	path = sites/src/qidejt.theme
+	url = git@github.com:adam139/qidejt.theme.git
