varnish recipe switch to 2.0a8

--- a/sites/pins-5.1.1.cfg
+++ b/sites/pins-5.1.1.cfg
@@ -1,4 +1,5 @@
 [versions]
+jinja2 = 2.10
 beautifulsoup4 = 4.6.0
 Products.ContentWellPortlets = 4.3.0
 chardet = 3.0.4
@@ -87,7 +88,7 @@ zope.app.file = 3.6.1
 zope.app.publication = 3.12.0
 
 
-plone.recipe.varnish = 2.0a5
+plone.recipe.varnish = 2.0a8
 mr.developer = 1.38
 Cheetah = 2.2.1
 Products.DocFinderTab = 1.0.5
@@ -117,7 +118,7 @@ superlance = 0.11
 tornado = 4.3
 toutpt.zopeskel = 1.3.3
 z3c.recipe.usercrontab = 1.4
-zc.recipe.cmmi = 1.3.6
+zc.recipe.cmmi = 2.0.0
 zc.recipe.deployment = 1.3.0
 
 # Required by:
