add Products.CMFPlone test surpport for development configuration

--- a/sites/buildout_dev.cfg
+++ b/sites/buildout_dev.cfg
@@ -29,6 +29,8 @@ verbose-security = on
 eggs =
     ${eggs:main}
     ${eggs:devtools}
+    plone.app.robotframework
+
     
 #zcml-additional =
 #    <include package="plone.app.async" file="single_db_instance.zcml" />
@@ -45,6 +47,8 @@ environment-vars =
 recipe = zc.recipe.testrunner
 eggs = ${eggs:test}
        ${eggs:main}
+       Products.CMFPlone
+       plone.app.robotframework
 defaults = ['--auto-color', '--auto-progress']
 
 # Coverage report generator.
