--- a/sites/config/deploy.cfg
+++ b/sites/config/deploy.cfg
@@ -100,6 +100,7 @@ zeo-address = ${zeoserver:zeo-address}
 user = ${buildout:user}
 # if we try to start as root, Zope will switch to the user below
 effective-user = ${buildout:effective-user}
+ip-address = 127.0.0.1
 http-address = ${buildout:client1-address}
 blob-storage = ${zeoserver:blob-storage}
 shared-blob = on
