remove lonsunn policy

--- a/sites/packages.cfg
+++ b/sites/packages.cfg
@@ -33,9 +33,9 @@ auto-checkout =
     hjzgb.theme
     lonsunn.theme
     xsgs.theme
-    my315ok.theme
-    my315ok.policy
-    lonsunn.policy
+#    my315ok.theme
+#    my315ok.policy
+#    lonsunn.policy
     wechat.policy
     membrane.usersinout
     dexterity.membrane
@@ -66,24 +66,24 @@ main =
     xsgs.policy
     xsgs.theme
     hjzgb.theme
-    lonsunn.theme
-    my315ok.theme
-    my315ok.policy
-    lonsunn.policy
+#    lonsunn.theme
+#    my315ok.theme
+#    my315ok.policy
+#    lonsunn.policy
     xsgs.policy
     hjzgb.policy
     wechat.policy
     my315ok.wechat
     membrane.usersinout
-    plone.app.multilingual
-    archetypes.multilingual
+#    plone.app.multilingual
+#    archetypes.multilingual
     WeRoBot
 
 test =
     xsgs.theme [test]
     hjzgb.theme [test]
-    lonsunn.theme [test]
-    my315ok.theme [test]
+#    lonsunn.theme [test]
+#    my315ok.theme [test]
     collective.diazotheme.bootstrap [test]
 
 devtools =
