add seo optimizer

--- a/sites/packages.cfg
+++ b/sites/packages.cfg
@@ -19,6 +19,7 @@ unzip = true
 # Packages to check out/update when buildout is run
 auto-checkout =	
     my315ok.socialorgnization
+    quintagroup.seoptimizer
     my315ok.products
     my315ok.wechat
     xtshzz.policy
@@ -31,11 +32,9 @@ auto-checkout =
     hjzgb.policy
     xsgs.policy
     hjzgb.theme
-    lonsunn.theme
     xsgs.theme
     my315ok.theme
     my315ok.policy
-    lonsunn.policy
     wechat.policy
     membrane.usersinout
     dexterity.membrane
@@ -53,6 +52,7 @@ main =
     Products.PloneFormGen
     Products.ContentWellPortlets
     my315ok.socialorgnization
+    quintagroup.seoptimizer
     my315ok.products
     collective.diazotheme.bootstrap
     dexterity.membrane
@@ -66,23 +66,18 @@ main =
     xsgs.policy
     xsgs.theme
     hjzgb.theme
-    lonsunn.theme
     my315ok.theme
     my315ok.policy
-    lonsunn.policy
     xsgs.policy
     hjzgb.policy
     wechat.policy
     my315ok.wechat
     membrane.usersinout
-    plone.app.multilingual
-    archetypes.multilingual
     WeRoBot
 
 test =
     xsgs.theme [test]
     hjzgb.theme [test]
-    lonsunn.theme [test]
     my315ok.theme [test]
     collective.diazotheme.bootstrap [test]
 
@@ -103,9 +98,7 @@ devtools =
 
 # Checkout locations
 [sources]
-collective.indexing = fs collective.indexing
-emc.theme = fs emc.theme
-emc.policy = fs emc.policy
+quintagroup.seoptimizer = fs quintagroup.seoptimizer
 xtshzz.policy = fs xtshzz.policy
 xsgs.policy = fs xsgs.policy
 xsgs.theme = fs xsgs.theme
@@ -116,14 +109,11 @@ qyxycjh.policy = fs qyxycjh.policy
 qidejt.theme = fs qidejt.theme
 qidejt.policy = fs qidejt.policy
 hjzgb.theme = fs hjzgb.theme
-lonsunn.theme = fs lonsunn.theme
 my315ok.theme = fs my315ok.theme
 my315ok.policy = fs my315ok.policy
-lonsunn.policy = fs lonsunn.policy
 hjzgb.policy = fs hjzgb.policy
 wechat.policy = fs wechat.policy
 my315ok.wechat = fs my315ok.wechat
-# my315ok.spider = fs my315ok.spider
 membrane.usersinout = fs membrane.usersinout
 my315ok.portlet.fetchouterhtml = fs my315ok.portlet.fetchouterhtml
 my315ok.socialorgnization = fs my315ok.socialorgnization
